--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
 						<a class="github-link dark-icon" href="https://github.com/idko2004/md-view" target="_blank" alt="github logo" title="View the source code"></a>
 						<a class="project-link dark-icon" href="http://idko.infinityfreeapp.com/md-view" target="_blank" alt="go to project" title="Try it out"></a>
 					</div>
-					<p class="txt" txt="mmdview1">hewo :3</p>
-					<p class="txt" txt="mmdview2">hewo :3</p>
-					<p class="txt" txt="mmdview3">hewo :3</p>
+					<p class="txt" txt="mmdview1">Existential</p>
+					<p class="txt" txt="mmdview2">plastic</p>
+					<p class="txt" txt="mmdview3">extra</p>
 					<div>
-						<b class="txt" txt="madewithhelp">hewo :3</b>
+						<b class="txt" txt="madewithhelp">nightly</b>
 						<div class="madewith-icons">
 							<img src="img/js.svg" alt="Javascript logo" title="Javascript">
 							<img src="img/Google_Fonts_icon.svg" alt="Google Fonts logo" title="Google Fonts">
@@ -192,14 +192,14 @@
 						<a class="github-link light-icon" href="https://github.com/idko2004/unidad" target="_blank" alt="github logo" title="View the source code"></a>
 						<a class="project-link light-icon" href="http://idko.infinityfreeapp.com/unidad" target="_blank" alt="go to project" title="Try it out"></a>
 					</div>
-					<p class="txt" txt="munidad1">hewo :3</p>
-					<p class="txt" txt="munidad2">hewo :3</p>
+					<p class="txt" txt="munidad1">cow</p>
+					<p class="txt" txt="munidad2">Damn</p>
 					<p>
-						<span class="txt" txt="munidad3">hewo :3</span>
-						<i class="txt" txt="munidad4">hewo :3</i>
-						<span class="txt" txt="munidad5">hewo :3</span>
+						<span class="txt" txt="munidad3">jettison</span>
+						<i class="txt" txt="munidad4">goodbye</i>
+						<span class="txt" txt="munidad5">through</span>
 					</p>
-					<p class="txt" txt="munidad6">hewo :3</p>
+					<p class="txt" txt="munidad6">Everything</p>
 				</main>
 			</div>
 		</dialog>
@@ -214,9 +214,11 @@
 					<div class="projecticons">
 						<a class="github-link light-icon" href="https://github.com/idko2004/colon-three-bot" target="_blank" alt="github logo" title="View the source code"></a>
 					</div>
-					<p>colon-three-bot is a Discord bot that does :3.</p>
-					<p>It will reply with certain emoticons if it finds them in a message.</p>
-					<p>Some of them are:<br>
+					<p class="txt" txt="m:31">center</p>
+					<p class="txt" txt="m:32">who</p>
+					<p>
+						<span class="txt" txt="m:33">Spidery</span>
+						<br>
 						<span class="spacer">:3</span>
 						<span class="spacer">:D</span>
 						<span class="spacer">:)</span>
@@ -226,7 +228,9 @@
 						<span class="spacer">:o</span>
 						<span class="spacer">:p</span>
 					</p>
-					<p>There are also sad ones:<br>
+					<p>
+						<span class="txt" txt="m:34">concubine</span>
+						<br>
 						<span class="spacer">:(</span>
 						<span class="spacer">:c</span>
 						<span class="spacer">:'(</span>
@@ -234,7 +238,7 @@
 						<span class="spacer">UnU</span>
 						<span class="spacer">TwT</span>
 					</p>
-					<p>For setting it up you will need to create a Discord bot (There are steps are detailed in the GitHub page).</p>
+					<p class="txt" txt="m:35">Pale</p>
 				</main>
 			</div>
 		</dialog>
@@ -249,15 +253,15 @@
 					<div class="projecticons">
 						<a class="github-link light-icon" href="https://github.com/idko2004/secret-santa" target="_blank" alt="github logo" title="View the source code"></a>
 					</div>
-					<p>Secret santa is a Discord bot for doing a... secret santa.</p>
+					<p class="txt" txt="msanta1">lickity-split</p>
 					<p>
-						The way it works is:
+						<span class="txt" txt="msanta2">remorse</span>
 						<ul>
-							<li>It sends a message in the specified channel.</li>
-							<li>The people who wants to participate react to the message with a specific emoji.</li>
-							<li>If the participant has the requiered role (optional), another role is given to them.</li>
-							<li>You should set up that role in a way that it gives access to a secret santa channel.</li>
-							<li>When you click the send santas button, the participants will receive their santa in their DMs (please tell everyone to keep their DMs open).</li>
+							<li class="txt" txt="msanta3">Vitamin</li>
+							<li class="txt" txt="msanta4">after</li>
+							<li class="txt" txt="msanta5">force</li>
+							<li class="txt" txt="msanta6">Already</li>
+							<li class="txt" txt="msanta7">nested</li>
 						</ul>
 					</p>
 				</main>
@@ -275,8 +279,8 @@
 						<a class="github-link light-icon" href="https://github.com/idko2004/dot-matrix" target="_blank" alt="github logo" title="View the source code"></a>
 						<a class="project-link light-icon" href="http://idko.infinityfreeapp.com/dot-matrix" target="_blank" alt="go to project" title="Try it out"></a>
 					</div>
-					<p>Dot Matrix is just a simple webpage that simulates a Dot matrix display billboard.</p>
-					<p>I made it because i thought it would be funny.</p>
+					<p class="txt" txt="mmatrix1">human</p>
+					<p class="txt" txt="mmatrix2">wine</p>
 				</main>
 			</div>
 		</dialog>
@@ -291,9 +295,9 @@
 					<div class="projecticons">
 						<a class="github-link light-icon" href="https://github.com/idko2004/convertMusic" target="_blank" alt="github logo" title="View the source code"></a>
 					</div>
-					<p>convertMusic is a little node.js program that converts files in a folder to another format using ffmpeg.</p>
-					<p>Like, for example, imagine that your car has a cheap stereo system that only works with mp3 files, but all your music files are in opus, instead of converting them one by one with ffmpeg, you can just use this program.</p>
-					<p>This program is basically a glorified way of running "ffmpeg -i input.opus output.mp3", I mean, that's literally what it does, but for each file in a folder.</p>
+					<p class="txt" txt="mcm1">Flight</p>
+					<p class="txt" txt="mcm2">Luminary</p>
+					<p class="txt" txt="mcm3">uprise</p>
 				</main>
 			</div>
 		</dialog>
@@ -308,9 +312,12 @@
 					<div class="projecticons">
 						<a class="github-link light-icon" href="https://github.com/idko2004/convertMusic" target="_blank" alt="github logo" title="View the source code"></a>
 					</div>
-					<p>random-c is my first program written in the C language<span class="spacer">c:</span></p>
-					<p>It chooses one of the options you give in the arguments. Or a random number if you use the -d flag.</p>
-					<p>Can choose from a file with the -f flag, or be piped to another program with the -p flag.</p>
+					<p>
+						<span class="txt" txt="mrandom1">Entanglement</span>
+						<span class="spacer">c:</span>
+					</p>
+					<p class="txt" txt="mrandom2">broke</p>
+					<p class="txt" txt="mrandom3">Unsophisticated</p>
 				</main>
 			</div>
 		</dialog>
