hecho con la ayuda de

--- a/index.html
+++ b/index.html
@@ -173,8 +173,26 @@
 					<div>
 						<b class="txt" txt="madewithhelp">nightly</b>
 						<div class="madewith-icons">
-							<img src="img/js.svg" alt="Javascript logo" title="Javascript">
-							<img src="img/Google_Fonts_icon.svg" alt="Google Fonts logo" title="Google Fonts">
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" class="linknodecoration">
+									<img src="img/js.svg" alt="Javascript logo" title="Javascript">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" class="linknodecoration">
+									<img src="img/html5.svg" alt="HTML logo" title="HTML">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" class="linknodecoration">
+									<img src="img/css3.svg" alt="CSS logo" title="CSS">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://fonts.google.com/" target="_blank" class="linknodecoration">
+									<img src="img/Google_Fonts_icon.svg" alt="Google Fonts logo" title="Google Fonts">
+								</a>
+							</span>
 						</div>
 					</div>
 				</main>
@@ -200,6 +218,44 @@
 						<span class="txt" txt="munidad5">through</span>
 					</p>
 					<p class="txt" txt="munidad6">Everything</p>
+					<div>
+						<b class="txt" txt="madewithhelp">nightly</b>
+						<div class="madewith-icons">
+							<span class="spacer">
+								<a href="https://nodejs.org/" target="_blank" class="linknodecoration">
+									<img src="img/nodejs.svg" alt="Node.js logo" title="Node.js">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" class="linknodecoration">
+									<img src="img/js.svg" alt="Javascript logo" title="Javascript">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" class="linknodecoration">
+									<img src="img/html5.svg" alt="HTML logo" title="HTML">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" class="linknodecoration">
+									<img src="img/css3.svg" alt="CSS logo" title="CSS">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://fonts.google.com/" target="_blank" class="linknodecoration">
+									<img src="img/Google_Fonts_icon.svg" alt="Google Fonts logo" title="Google Fonts">
+								</a>
+							</span>
+							<p>
+								<span class="txt" txt="nodelibs"></span> 
+								<a href="https://www.npmjs.com/package/colors" target="_blank">colors</a>, 
+								<a href="https://www.npmjs.com/package/dotenv" target="_blank">dotenv</a>, 
+								<a href="https://www.npmjs.com/package/generate-key" target="_blank">generate-key</a>, 
+								<a href="https://www.npmjs.com/package/ip" target="_blank">ip</a>, 
+								<a href="https://www.npmjs.com/package/ws" target="_blank">ws</a>
+							</p>
+						</div>
+					</div>
 				</main>
 			</div>
 		</dialog>
@@ -239,6 +295,25 @@
 						<span class="spacer">TwT</span>
 					</p>
 					<p class="txt" txt="m:35">Pale</p>
+					<div>
+						<b class="txt" txt="madewithhelp">nightly</b>
+						<div class="madewith-icons">
+							<span class="spacer">
+								<a href="https://nodejs.org/" target="_blank" class="linknodecoration">
+									<img src="img/nodejs.svg" alt="Node.js logo" title="Node.js">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://termux.dev/en/" target="_blank" class="linknodecoration">
+									<img src="img/termux.png" alt="Termux logo" title="Termux">
+								</a>
+							</span>
+							<p>
+								<span class="txt" txt="nodelibs"></span> 
+								<a href="https://www.npmjs.com/package/discord.js" target="_blank">discord.js</a>
+							</p>
+						</div>
+					</div>
 				</main>
 			</div>
 		</dialog>
@@ -264,6 +339,41 @@
 							<li class="txt" txt="msanta7">nested</li>
 						</ul>
 					</p>
+					<div>
+						<b class="txt" txt="madewithhelp">nightly</b>
+						<div class="madewith-icons">
+							<span class="spacer">
+								<a href="https://nodejs.org/" target="_blank" class="linknodecoration">
+									<img src="img/nodejs.svg" alt="Node.js logo" title="Node.js">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://termux.dev/en/" target="_blank" class="linknodecoration">
+									<img src="img/termux.png" alt="Termux logo" title="Termux">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" class="linknodecoration">
+									<img src="img/js.svg" alt="Javascript logo" title="Javascript">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" class="linknodecoration">
+									<img src="img/html5.svg" alt="HTML logo" title="HTML">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" class="linknodecoration">
+									<img src="img/css3.svg" alt="CSS logo" title="CSS">
+								</a>
+							</span>
+							<p>
+								<span class="txt" txt="nodelibs"></span> 
+								<a href="https://www.npmjs.com/package/discord.js" target="_blank">discord.js</a>,
+								<a href="https://www.npmjs.com/package/path" target="_blank">path</a>
+							</p>
+						</div>
+					</div>
 				</main>
 			</div>
 		</dialog>
@@ -281,6 +391,26 @@
 					</div>
 					<p class="txt" txt="mmatrix1">human</p>
 					<p class="txt" txt="mmatrix2">wine</p>
+					<div>
+						<b class="txt" txt="madewithhelp">nightly</b>
+						<div class="madewith-icons">
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" class="linknodecoration">
+									<img src="img/js.svg" alt="Javascript logo" title="Javascript">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" class="linknodecoration">
+									<img src="img/html5.svg" alt="HTML logo" title="HTML">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" class="linknodecoration">
+									<img src="img/css3.svg" alt="CSS logo" title="CSS">
+								</a>
+							</span>
+						</div>
+					</div>
 				</main>
 			</div>
 		</dialog>
@@ -298,6 +428,21 @@
 					<p class="txt" txt="mcm1">Flight</p>
 					<p class="txt" txt="mcm2">Luminary</p>
 					<p class="txt" txt="mcm3">uprise</p>
+					<div>
+						<b class="txt" txt="madewithhelp">nightly</b>
+						<div class="madewith-icons">
+							<span class="spacer">
+								<a href="https://nodejs.org/" target="_blank" class="linknodecoration">
+									<img src="img/nodejs.svg" alt="Node.js logo" title="Node.js">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://ffmpeg.org/" target="_blank" class="linknodecoration">
+									<img src="img/ffmpeg.png" alt="Ffmpeg logo" title="Ffmpeg">
+								</a>
+							</span>
+						</div>
+					</div>
 				</main>
 			</div>
 		</dialog>
@@ -318,6 +463,16 @@
 					</p>
 					<p class="txt" txt="mrandom2">broke</p>
 					<p class="txt" txt="mrandom3">Unsophisticated</p>
+					<div>
+						<b class="txt" txt="madewithhelp">nightly</b>
+						<div class="madewith-icons">
+							<span class="spacer">
+								<a href="https://gcc.gnu.org/" target="_blank" class="linknodecoration">
+									<img src="img/gcc.png" alt="gcc logo" title="gcc">
+								</a>
+							</span>
+						</div>
+					</div>
 				</main>
 			</div>
 		</dialog>
