--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 		<link rel="preload" href="commonassets/fonts/NotoSans-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin>
 		<link rel="preload" href="commonassets/fonts/NotoSans-Italic-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin>
 		<link rel="preload" href="commonassets/fonts/JetBrainsMono-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
+		<link rel="preload" href="commonassets/fonts/ComicNeue-Regular.ttf" as="font" type="font/ttf" crossorigin>
+		<link rel="preload" href="commonassets/fonts/ComicNeue-Bold.ttf" as="font" type="font/ttf" crossorigin>
 	</head>
 
 	<body>
@@ -80,6 +82,11 @@
 							<article>
 								<a href="https://github.com/idko2004/secret-santa" target="_blank">
 									<img src="img/secretsanta.svg" class="card titletxt" titletxt="tsanta" right-click="modal-secretsanta" alt="Secret santa" title="Secret Santa: Organize a secret santa between your friends on discord">
+								</a>
+							</article>
+							<article>
+								<a href="https://github.com/idko2004/mal-randomizer" target="_blank">
+									<img src="img/malrandomizer.svg" class="card titletxt" titletxt="tmal" right-click="modal-mal" alt="MyAnimeList randomizer" title="mal-randomizer: Find what anime to watch next">
 								</a>
 							</article>
 						</div>
@@ -469,6 +476,47 @@
 									<img src="img/gcc.png" alt="gcc logo" title="gcc">
 								</a>
 							</span>
+						</div>
+					</div>
+				</main>
+			</div>
+		</dialog>
+
+		<dialog id="modal-mal">
+			<div>
+				<header>
+					mal-randomizer
+					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-mal"></a>
+				</header>
+				<main>
+					<div class="projecticons">
+						<a class="github-link dark-icon" href="https://github.com/idko2004/mal-randomizer" target="_blank" alt="github logo" title="View the source code"></a>
+					</div>
+					<p class="txt" txt="mmal1">asdf</p>
+					<p class="txt" txt="mmal2">fads</p>
+					<p class="txt" txt="mmal3">gfd</p>
+					<div>
+						<b class="txt" txt="madewithhelp">dfg</b>
+						<div class="madewith-icons">
+							<span class="spacer">
+								<a href="https://gcc.gnu.org/" target="_blank" class="linknodecoration">
+									<img src="img/gcc.png" alt="gcc logo" title="gcc">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://gtk.org/" target="_blank" class="linknodecoration">
+									<img src="img/GTK_logo.svg" alt="gtk logo" title="gtk">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://curl.se/" target="_blank" class="linknodecoration">
+									<img src="img/curl-logo.svg" alt="curl logo" title="curl">
+								</a>
+							</span>
+							<p>
+								<span txt="libs" class="txt">Librerías adicionales: </span>
+								<a href="https://github.com/DaveGamble/cJSON" target="_blank">cJSON</a>
+							</p>
 						</div>
 					</div>
 				</main>
