--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
 									<img src="img/randomc.svg" class="card titletxt" titletxt="trandomc" right-click="modal-randomc" alt="random-c" title='random-c: Generate a random number'>
 								</a>
 							</article>
+							<article>
+								<a href="https://github.com/idko2004/cosa-matematicas" target="_blank">
+									<img src="img/cosa-matematicas.svg" class="card titletxt" titletxt="tcosa" right-click="modal-cosa" alt="cosa-matematicas" title='cosa-matemáticas: Helps with one specific math homework.'>
+								</a>
+							</article>
 						</div>
 					</section>
 					<section>
@@ -517,6 +522,33 @@
 								<span txt="libs" class="txt">Librerías adicionales: </span>
 								<a href="https://github.com/DaveGamble/cJSON" target="_blank">cJSON</a>
 							</p>
+						</div>
+					</div>
+				</main>
+			</div>
+		</dialog>
+
+		<dialog id="modal-cosa">
+			<div>
+				<header>
+					cosa-matemáticas
+					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-cosa"></a>
+				</header>
+				<main>
+					<div class="projecticons">
+						<a class="github-link light-icon" href="https://github.com/idko2004/cosa-matematicas" target="_blank" alt="github logo" title="View the source code"></a>
+					</div>
+					<p class="txt" txt="mcosa1">wer</p>
+					<p class="txt" txt="mcosa2">dfsg</p>
+					<p class="txt" txt="mcosa3">ertd</p>
+					<div>
+						<b class="txt" txt="madewithhelp">gfds</b>
+						<div class="madewith-icons">
+							<span class="spacer">
+								<a href="https://gcc.gnu.org/" target="_blank" class="linknodecoration">
+									<img src="img/gcc.png" alt="gcc logo" title="gcc">
+								</a>
+							</span>
 						</div>
 					</div>
 				</main>
