faltan poner los proyectos viejos

--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
 									<img src="img/secretsanta.svg" class="card titletxt" titletxt="tsanta" right-click="modal-secretsanta" alt="Secret santa" title="Secret Santa: Organize a secret santa between your friends on discord">
 								</a>
 							</article>
+							<article>
+								<a href="http://idko.infinityfreeapp.com/random/index.html" target="_blank">
+									<img src="img/random.svg" class="card titletxt" titletxt="tsanta" right-click="modal-secretsanta" alt="Secret santa" title="Secret Santa: Organize a secret santa between your friends on discord">
+								</a>
+							</article>
 						</div>
 					</section>
 					<section id="smallprojectssection">
