added old projects

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							</article>
 							<article>
 								<a href="http://idko.infinityfreeapp.com/random/index.html" target="_blank">
-									<img src="img/random.svg" class="card titletxt" titletxt="tsanta" right-click="modal-secretsanta" alt="Secret santa" title="Secret Santa: Organize a secret santa between your friends on discord">
+									<img src="img/random.svg" class="card titletxt" titletxt="trandom" right-click="modal-random" alt="Random" title="Random: Choose a random item from a list.">
 								</a>
 							</article>
 						</div>
@@ -123,10 +123,26 @@
 									<img src="img/dotmatrix.svg" class="card titletxt" titletxt="tmatrix" right-click="modal-dotmatrix" alt="Dot Matrix" title='Dot Matrix: "Simulating" a dot matrix billboard'>
 								</a>
 							</article>
+							<article>
+								<a href="http://idko.infinityfreeapp.com/buscaminas/index.html" target="_blank">
+									<img src="img/buscaminas.svg" class="card titletxt" titletxt="tmatrix" right-click="modal-buscaminas" alt="Buscaminas" title='Dot Matrix: "Simulating" a dot matrix billboard'>
+								</a>
+							</article>
 						</div>
 					</section>
 					<section>
-
+						<div class="h2-container-container">
+							<div class="h2-container">
+								<h2 class="txt" txt="deadprojects">Abandoned projects</h2>
+							</div>
+						</div>
+						<div>
+							<article>
+								<a href="http://idko.infinityfreeapp.com/idko-bot/index.html" target="_blank">
+									<img src="img/idkobot.svg" class="card titletxt" titletxt="tsanta" right-click="modal-secretsanta" alt="idko-bot" title="Secret Santa: Organize a secret santa between your friends on discord">
+								</a>
+							</article>
+						</div>
 					</section>
 				</main>
 			</div>
@@ -552,6 +568,48 @@
 							<span class="spacer">
 								<a href="https://gcc.gnu.org/" target="_blank" class="linknodecoration">
 									<img src="img/gcc.png" alt="gcc logo" title="gcc">
+								</a>
+							</span>
+						</div>
+					</div>
+				</main>
+			</div>
+		</dialog>
+
+		<dialog id="modal-random">
+			<div>
+				<header>
+					Random
+					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-random"></a>
+				</header>
+				<main>
+					<div class="projecticons">
+						<a class="project-link light-icon" href="http://idko.infinityfreeapp.com/random/" target="_blank" alt="go to project" title="Try it out"></a>
+					</div>
+					<p class="txt" txt="mjsrandom1">something</p>
+					<p class="txt" txt="mjsrandom2">something</p>
+					<p class="txt" txt="mjsrandom3">something</p>
+					<div>
+						<b class="txt" txt="madewithhelp">something</b>
+						<div class="madewith-icons">
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" class="linknodecoration">
+									<img src="img/js.svg" alt="Javascript logo" title="Javascript">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" class="linknodecoration">
+									<img src="img/html5.svg" alt="HTML logo" title="HTML">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" class="linknodecoration">
+									<img src="img/css3.svg" alt="CSS logo" title="CSS">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://fonts.google.com/" target="_blank" class="linknodecoration">
+									<img src="img/Google_Fonts_icon.svg" alt="Google Fonts logo" title="Google Fonts">
 								</a>
 							</span>
 						</div>
