modal de buscaminas

--- a/index.html
+++ b/index.html
@@ -17,20 +17,6 @@
 		<script defer src="js/modals.js"></script>
 		<script defer src="js/language.js"></script>
 		<script defer src="js/music.js"></script>
-
-		<link rel="stylesheet" href="prefetch.css">
-		<!--Aquí poner fuentes para precargar-->
-		<!--Idealmente pondríamos todo aquí y con rel="prefetch" pero se ve que los navegadores son tontísimos-->
-		<link rel="preload" href="commonassets/fonts/Ubuntu-Regular.ttf" as="font" type="font/ttf" crossorigin>
-		<link rel="preload" href="commonassets/fonts/Ubuntu-Italic.ttf" as="font" type="font/ttf" crossorigin>
-		<link rel="preload" href="commonassets/fonts/Ubuntu-Bold.ttf" as="font" type="font/ttf" crossorigin>
-		<link rel="preload" href="commonassets/fonts/Ubuntu-BoldItalic.ttf" as="font" type="font/ttf" crossorigin>
-		<link rel="preload" href="commonassets/fonts/TiltWarp-Regular-VariableFont.ttf" as="font" type="font/ttf" crossorigin>
-		<link rel="preload" href="commonassets/fonts/NotoSans-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin>
-		<link rel="preload" href="commonassets/fonts/NotoSans-Italic-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin>
-		<link rel="preload" href="commonassets/fonts/JetBrainsMono-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
-		<link rel="preload" href="commonassets/fonts/ComicNeue-Regular.ttf" as="font" type="font/ttf" crossorigin>
-		<link rel="preload" href="commonassets/fonts/ComicNeue-Bold.ttf" as="font" type="font/ttf" crossorigin>
 	</head>
 
 	<body>
@@ -125,7 +111,7 @@
 							</article>
 							<article>
 								<a href="http://idko.infinityfreeapp.com/buscaminas/index.html" target="_blank">
-									<img src="img/buscaminas.svg" class="card titletxt" titletxt="tmatrix" right-click="modal-buscaminas" alt="Buscaminas" title='Dot Matrix: "Simulating" a dot matrix billboard'>
+									<img src="img/buscaminas.svg" class="card titletxt" titletxt="tmines" right-click="modal-buscaminas" alt="Buscaminas" title='Buscaminas: The worst minesweeper you will ever play'>
 								</a>
 							</article>
 						</div>
@@ -618,5 +604,63 @@
 			</div>
 		</dialog>
 
+		<dialog id="modal-buscaminas">
+			<div>
+				<header>
+					Buscaminas
+					<a class="closemodal dark-icon" alt="close button" title="Close" modalparent="modal-buscaminas"></a>
+				</header>
+				<main>
+					<div class="projecticons">
+						<a class="project-link dark-icon" href="http://idko.infinityfreeapp.com/buscaminas/" target="_blank" alt="go to project" title="Try it out"></a>
+					</div>
+					<p class="txt" txt="mmines1">something</p>
+					<div>
+						<b class="txt" txt="madewithhelp">something</b>
+						<div class="madewith-icons">
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" class="linknodecoration">
+									<img src="img/js.svg" alt="Javascript logo" title="Javascript">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" class="linknodecoration">
+									<img src="img/html5.svg" alt="HTML logo" title="HTML">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" class="linknodecoration">
+									<img src="img/css3.svg" alt="CSS logo" title="CSS">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://fonts.google.com/" target="_blank" class="linknodecoration">
+									<img src="img/Google_Fonts_icon.svg" alt="Google Fonts logo" title="Google Fonts">
+								</a>
+							</span>
+						</div>
+					</div>
+				</main>
+			</div>
+		</dialog>
+
 	</body>
+
+<!--Prefetch zone-->
+	<link rel="stylesheet" href="prefetch.css">
+	<!--Aquí poner fuentes para precargar-->
+	<!--Idealmente pondríamos todo aquí y con rel="prefetch" pero se ve que los navegadores son tontísimos-->
+	<link rel="preload" href="commonassets/fonts/Ubuntu-Regular.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="commonassets/fonts/Ubuntu-Italic.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="commonassets/fonts/Ubuntu-Bold.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="commonassets/fonts/Ubuntu-BoldItalic.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="commonassets/fonts/TiltWarp-Regular-VariableFont.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="commonassets/fonts/NotoSans-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="commonassets/fonts/NotoSans-Italic-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="commonassets/fonts/JetBrainsMono-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="commonassets/fonts/ComicNeue-Regular.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="commonassets/fonts/ComicNeue-Bold.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="commonassets/fonts/UbuntuMono-Regular.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="commonassets/fonts/UbuntuMono-Bold.ttf" as="font" type="font/ttf" crossorigin>
+<!--/Prefetch zone-->
 </html>
