--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						<div>
 							<article>
 								<a href="http://idko.infinityfreeapp.com/idko-bot/index.html" target="_blank">
-									<img src="img/idkobot.svg" class="card titletxt" titletxt="tsanta" right-click="modal-secretsanta" alt="idko-bot" title="Secret Santa: Organize a secret santa between your friends on discord">
+									<img src="img/idkobot.svg" class="card titletxt" titletxt="tidkobot" right-click="modal-idkobot" alt="idko-bot" title="Secret Santa: Organize a secret santa between your friends on discord">
 								</a>
 							</article>
 						</div>
@@ -638,6 +638,49 @@
 									<img src="img/Google_Fonts_icon.svg" alt="Google Fonts logo" title="Google Fonts">
 								</a>
 							</span>
+						</div>
+					</div>
+				</main>
+			</div>
+		</dialog>
+
+		<dialog id="modal-idkobot">
+			<div>
+				<header>
+					idko-bot
+					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-idkobot"></a>
+				</header>
+				<main>
+					<div class="projecticons">
+						<a class="project-link light-icon" href="http://idko.infinityfreeapp.com/idko-bot/" target="_blank" alt="See webpage" title="See webpage"></a>
+					</div>
+					<p class="txt" txt="midkobot1">b</p>
+					<p>
+						<span class="txt" txt="midkobot2">b</span> 
+						<a href="https://discord.bots.gg/bots/379757424447455232" target="_blank">Chocolat</a> 
+						<span class="txt" txt="and"></span> 
+						<a href="https://nekotina.com/" target="_blank">Nekotina</a>.
+					</p>
+					<p class="txt" txt="midkobot3">b</p>
+					<div>
+						<b class="txt" txt="madewithhelp">nightly</b>
+						<div class="madewith-icons">
+							<span class="spacer">
+								<a href="https://nodejs.org/" target="_blank" class="linknodecoration">
+									<img src="img/nodejs.svg" alt="Node.js logo" title="Node.js">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://mongodb.com" target="_blank" class="linknodecoration">
+									<img src="img/MongoDB_Fores-Green.svg" alt="MongoDB logo" title="MongoDB">
+								</a>
+							</span>
+							<p>
+								<span class="txt" txt="nodelibs"></span> 
+								<a href="https://www.npmjs.com/package/discord.js" target="_blank">discord.js</a>, 
+								<a href="https://www.npmjs.com/package/dotenv" target="_blank">dotenv</a>, 
+								<a href="https://www.npmjs.com/package/node-schedule" target="_blank">node-schedule</a>.
+							</p>
 						</div>
 					</div>
 				</main>
