--- a/index.html
+++ b/index.html
@@ -124,8 +124,13 @@
 						</div>
 						<div>
 							<article>
+								<a href="http://idko.infinityfreeapp.com/notes/index.html" target="_blank">
+									<img src="img/notas.svg" class="card titletxt" titletxt="tnotas" right-click="modal-notas" alt="Notas" title="Notas: Simple notes application">
+								</a>
+							</article>
+							<article>
 								<a href="http://idko.infinityfreeapp.com/idko-bot/index.html" target="_blank">
-									<img src="img/idkobot.svg" class="card titletxt" titletxt="tidkobot" right-click="modal-idkobot" alt="idko-bot" title="Secret Santa: Organize a secret santa between your friends on discord">
+									<img src="img/idkobot.svg" class="card titletxt" titletxt="tidkobot" right-click="modal-idkobot" alt="idko-bot" title="idko-bot: Multipurpose discord bot">
 								</a>
 							</article>
 						</div>
@@ -680,6 +685,78 @@
 								<a href="https://www.npmjs.com/package/discord.js" target="_blank">discord.js</a>, 
 								<a href="https://www.npmjs.com/package/dotenv" target="_blank">dotenv</a>, 
 								<a href="https://www.npmjs.com/package/node-schedule" target="_blank">node-schedule</a>.
+							</p>
+						</div>
+					</div>
+				</main>
+			</div>
+		</dialog>
+
+		<dialog id="modal-notas">
+			<div>
+				<header>
+					Notas
+					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-notas"></a>
+				</header>
+				<main>
+					<div class="projecticons">
+						<a class="github-link light-icon" href="https://github.com/idko2004/notes" target="_blank" alt="github logo" title="View the source code"></a>
+						<a class="project-link light-icon" href="http://idko.infinityfreeapp.com/notes/index.html" target="_blank" alt="go to project" title="Try it out"></a>
+					</div>
+					<p class="txt" txt="mnotas1">cow</p>
+					<p class="txt" txt="mnotas2">cow</p>
+					<p class="txt" txt="mnotas3">cow</p>
+					<p class="txt" txt="mnotas4">cow</p>
+					<div>
+						<b class="txt" txt="madewithhelp">nightly</b>
+						<div class="madewith-icons">
+							<span class="spacer">
+								<a href="https://nodejs.org/" target="_blank" class="linknodecoration">
+									<img src="img/nodejs.svg" alt="Node.js logo" title="Node.js" style="background-color: white;">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://mongodb.com" target="_blank" class="linknodecoration">
+									<img src="img/MongoDB_Fores-Green.svg" alt="MongoDB logo" title="MongoDB" style="background-color: white;">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" class="linknodecoration">
+									<img src="img/js.svg" alt="Javascript logo" title="Javascript">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" class="linknodecoration">
+									<img src="img/html5.svg" alt="HTML logo" title="HTML">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" class="linknodecoration">
+									<img src="img/css3.svg" alt="CSS logo" title="CSS">
+								</a>
+							</span>
+							<span class="spacer">
+								<a href="https://fonts.google.com/" target="_blank" class="linknodecoration">
+									<img src="img/Google_Fonts_icon.svg" alt="Google Fonts logo" title="Google Fonts">
+								</a>
+							</span>
+							<p>
+								<span class="txt" txt="frontendlibs"></span> 
+								<a href="https://axios-http.com/docs/intro" target="_blank">axios</a>, 
+								<a href="https://github.com/brix/crypto-js" target="_blank">crypto-js</a>.
+							</p>
+							<p>
+								<span class="txt" txt="nodelibs"></span> 
+								<a href="https://www.npmjs.com/package/bcrypt" target="_blank">bcrypt</a>, 
+								<a href="https://www.npmjs.com/package/body-parser" target="_blank">body-parser</a>, 
+								<a href="https://www.npmjs.com/package/colors" target="_blank">colors</a>, 
+								<a href="https://www.npmjs.com/package/cors" target="_blank">cors</a>, 
+								<a href="https://www.npmjs.com/package/crypto-js" target="_blank">crypto-js</a>, 
+								<a href="https://www.npmjs.com/package/dotenv" target="_blank">dotenv</a>, 
+								<a href="https://www.npmjs.com/package/express" target="_blank">express</a>, 
+								<a href="https://www.npmjs.com/package/generate-key" target="_blank">generate-key</a>, 
+								<a href="https://www.npmjs.com/package/generate-password" target="_blank">generate-password</a>, 
+								<a href="https://www.npmjs.com/package/nodemailer" target="_blank">nodemailer</a>.
 							</p>
 						</div>
 					</div>
