scripts and things

--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
 								</a>
 							</article>
 							<article>
+								<a href="https://github.com/idko2004/scripts-and-things" target="_blank">
+									<img src="img/scriptsandthings.svg" class="card titletxt" titletxt="tscriptsandthings" right-click="modal-scriptsandthings" alt="scripts-and-things" title='scripts-and-things: Also known as dot-files'>
+								</a>
+							</article>
+							<article>
 								<a href="https://github.com/idko2004/convertMusic" target="_blank">
 									<img src="img/convertmusic.svg" class="card titletxt" titletxt="tconvertmusic" right-click="modal-convertmusic" alt="convertMusic" title='convertMusic: Use ffmpeg to convert a folder of one type of files to another'>
 								</a>
@@ -760,6 +765,21 @@
 							</p>
 						</div>
 					</div>
+				</main>
+			</div>
+		</dialog>
+
+		<dialog id="modal-scriptsandthings">
+			<div>
+				<header>
+					scripts-and-things
+					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-scriptsandthings"></a>
+				</header>
+				<main>
+					<div class="projecticons">
+						<a class="github-link light-icon" href="https://github.com/idko2004/scripts-and-things" target="_blank" alt="github logo" title="View the source code"></a>
+					</div>
+					<p class="txt" txt="mscripts1">wer</p>
 				</main>
 			</div>
 		</dialog>
